--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@playwright/test": "^1.33.0",
     "playwright-firefox": "^1.33.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
