--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ SEARCH_TEXTBOX_ID='#twotabsearchtextbox'
 SEARCH_PRODUCT_NAME='samsung mobile'
 SUBMIT_BUTTON_ID='#nav-search-submit-button'
 SELECT_PRODUCT_ID='.s-result-item:nth-child(5) h2 a'
+# WEBURL = 'https://www.amazon.in/'
+# SEARCHBOXID = '#twotabsearchtextbox'
+# SEARCHKEYWORD = 'samsung mobile'
+# SEARCHBUTTON = '#nav-search-submit-button'
+# ITEMKEY = '.s-result-item:nth-child(6) h2 a'
